[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Envelope/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Sobre.png" type="Texture" id=2]
[ext_resource path="res://scenes/Envelope/RigidBody2D.gd" type="Script" id=3]
[ext_resource path="res://assets/Carta.png" type="Texture" id=4]
[ext_resource path="res://assets/SobreAbierto.png" type="Texture" id=5]
[ext_resource path="res://scenes/Envelope/Paso1.gd" type="Script" id=6]
[ext_resource path="res://assets/SobreCerrado.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 166.751, 185.717 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -87.557
margin_top = -38.5571
margin_right = 1178.44
margin_bottom = 638.443
mouse_filter = 2
color = Color( 0.372549, 0.431373, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paso2" type="Node2D" parent="."]

[node name="CartaAtras" type="Sprite" parent="Paso2"]
position = Vector2( 487.899, 411.366 )
texture = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="Paso2"]
position = Vector2( 494.509, 455.342 )
input_pickable = true
gravity_scale = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="LetterNode" type="Node2D" parent="Paso2/RigidBody2D"]

[node name="ColorRect" type="ColorRect" parent="Paso2/RigidBody2D/LetterNode"]
margin_left = -114.0
margin_top = -121.0
margin_right = 112.0
margin_bottom = 126.0
mouse_filter = 2

[node name="Sprite" type="Sprite" parent="Paso2/RigidBody2D/LetterNode"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paso2/RigidBody2D"]
position = Vector2( -3.9816, 3.01468 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="CartaFrente" type="Sprite" parent="Paso2"]
position = Vector2( 487.899, 413.757 )
texture = ExtResource( 5 )

[node name="Paso1" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="SobreCerrado" type="Sprite" parent="Paso1"]
position = Vector2( 487.899, 416.149 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="Paso1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 323.0
margin_top = 386.0
margin_right = 656.0
margin_bottom = 582.0
focus_mode = 0
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = 6.0
margin_right = 1023.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "I have to open the envelope first"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="input_event" from="Paso2/RigidBody2D" to="Paso2/RigidBody2D" method="_on_RigidBody2D_input_event"]
[connection signal="pressed" from="Paso1/Button" to="Paso1" method="_on_Button_pressed"]
[connection signal="timeout" from="FinalTimer" to="." method="_on_FinalTimer_timeout"]
